Finalização dos ultimos endpoints e testes